changed font family to be poppins

--- a/index.html
+++ b/index.html
@@ -1,275 +1,284 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Panggil Nafi</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<header>
-    <div class="container">
-        <div class="menu-area">    
-            <div class="menu">
-                <div class="garis1"></div>
-                <div class="garis2"></div>
-                <div class="garis3"></div>
-            </div>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="menu-area">
+          <div class="menu">
+            <div class="garis1"></div>
+            <div class="garis2"></div>
+            <div class="garis3"></div>
+          </div>
         </div>
         <nav>
-            <ul class="navigasi">
-                <li class="aktif">
-                    <a href="#profil">Contact</a>
-                </li>
-                <li>
-                    <a href="#personal">Personal</a>
-                </li>
-                <li>
-                    <a href="#experience">Experience</a>
-                </li>
-                <li>
-                    <a href="#education">Education</a>
-                </li>
-                <li>
-                    <a href="#organization">Organization</a>
-                </li>
-                <li>
-                    <a href="#commitee">Commitee</a>
-                </li>
-                <li>
-                    <a href="#knowledge">Knowledge</a>
-                </li>
-                <li>
-                    <a href="#interest">Interest</a>
-                </li>
-            </ul>
+          <ul class="navigasi">
+            <li class="aktif">
+              <a href="#profil">Contact</a>
+            </li>
+            <li>
+              <a href="#personal">Personal</a>
+            </li>
+            <li>
+              <a href="#experience">Experience</a>
+            </li>
+            <li>
+              <a href="#education">Education</a>
+            </li>
+            <li>
+              <a href="#organization">Organization</a>
+            </li>
+            <li>
+              <a href="#commitee">Commitee</a>
+            </li>
+            <li>
+              <a href="#knowledge">Knowledge</a>
+            </li>
+            <li>
+              <a href="#interest">Interest</a>
+            </li>
+          </ul>
         </nav>
         <nav>
-            <ul class="navigasi-desktop">
-                <li class="aktif">
-                    <a href="#profil">Contact</a>
-                </li>
-                <li>
-                    <a href="#personal">Personal</a>
-                </li>
-                <li>
-                    <a href="#experience">Experience</a>
-                </li>
-                <li>
-                    <a href="#education">Education</a>
-                </li>
-                <li>
-                    <a href="#organization">Organization</a>
-                </li>
-                <li>
-                    <a href="#commitee">Commitee</a>
-                </li>
-                <li>
-                    <a href="#knowledge">Knowledge</a>
-                </li>
-                <li>
-                    <a href="#interest">Interest</a>
-                </li>
-            </ul>
+          <ul class="navigasi-desktop">
+            <li class="aktif">
+              <a href="#profil">Contact</a>
+            </li>
+            <li>
+              <a href="#personal">Personal</a>
+            </li>
+            <li>
+              <a href="#experience">Experience</a>
+            </li>
+            <li>
+              <a href="#education">Education</a>
+            </li>
+            <li>
+              <a href="#organization">Organization</a>
+            </li>
+            <li>
+              <a href="#commitee">Commitee</a>
+            </li>
+            <li>
+              <a href="#knowledge">Knowledge</a>
+            </li>
+            <li>
+              <a href="#interest">Interest</a>
+            </li>
+          </ul>
         </nav>
+      </div>
 
-   </div>
-
-   <div class="container">
+      <div class="container">
         <section id="profil">
-            <div class="isi-profil">
-                <div class="isi-profil__overlay">
-                    <img class="fotoCV" src="img/foto-cv.png" alt="Foto CV">
-                </div>
+          <div class="isi-profil">
+            <div class="isi-profil__overlay">
+              <img class="fotoCV" src="img/foto-cv.png" alt="Foto CV" />
             </div>
-            <div class="isi-profil">
-                <h1>Muhammad Nafi' Furqon Diani</h1>
-                <div class="kontak">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=nafifurqon@gamail.com" target="blank">
-                        <img src="img/mail.svg" alt="email">                        
-                    </a>
-                    <p>nafifurqon@gmail.com</p>
-                </div>
-                <div class="kontak">
-                    <a href="https://wa.me/6281617175357" target="blank">
-                        <img src="img/phone-call.svg" alt="phone">
-                    </a>
-                    <p>+6281617175357</p>
-                </div>
-                <div class="kontak">
-                    <a href="https://www.google.com/maps/place/Bekasi,+Jawa+Barat/@-6.198337,106.8527056,10z/data=!3m1!4b1!4m5!3m4!1s0x2e698671b82e87bf:0xf60baf1ac79f46c!8m2!3d-6.3667975!4d107.1735694" target="blank">
-                        <img src="img/placeholder.svg" alt="home">
-                    </a>
-                    <p>Bekasi, Jawa Barat, Indonesia</p>
-                </div> 
+          </div>
+          <div class="isi-profil">
+            <h1>Muhammad Nafi' Furqon Diani</h1>
+            <div class="kontak">
+              <a
+                href="https://mail.google.com/mail/?view=cm&fs=1&to=nafifurqon@gamail.com"
+                target="blank"
+              >
+                <img src="img/mail.svg" alt="email" />
+              </a>
+              <p>nafifurqon@gmail.com</p>
             </div>
+            <div class="kontak">
+              <a href="https://wa.me/6281617175357" target="blank">
+                <img src="img/phone-call.svg" alt="phone" />
+              </a>
+              <p>+6281617175357</p>
+            </div>
+            <div class="kontak">
+              <a
+                href="https://www.google.com/maps/place/Bekasi,+Jawa+Barat/@-6.198337,106.8527056,10z/data=!3m1!4b1!4m5!3m4!1s0x2e698671b82e87bf:0xf60baf1ac79f46c!8m2!3d-6.3667975!4d107.1735694"
+                target="blank"
+              >
+                <img src="img/placeholder.svg" alt="home" />
+              </a>
+              <p>Bekasi, Jawa Barat, Indonesia</p>
+            </div>
+          </div>
         </section>
-    </div>
-</header>
+      </div>
+    </header>
 
-<section id="kotak">
-    <div class="container">
+    <section id="kotak">
+      <div class="container">
         <div id="kotak-personal">
-            <div class="isi-kotak">
-                <div class="judul-isi-kotak">
-                    <div class="judul-isi-kotak__img">
-                        <img src="img/avatar.svg" alt="personal info">
-                    </div>
-                    <div id="personal">
-                        <h2>Personal Info</h2>
-                    </div>
-                </div>
-                <div class="content-kotak">
-                    <p class="content-kotak__paragraf">
-                        I am a fresh graduate. I graduated from IPB vocational school computer engineering. I am currently 21 years old. I am interested in software engineers, especially websites and mobile applications. I am also interested in cloud computing. I have a high curiosity and I like learning new things. I like to compete, I can work in groups, and I am not difficult to adapt.
-                    </p>
-                </div>
+          <div class="isi-kotak">
+            <div class="judul-isi-kotak">
+              <div class="judul-isi-kotak__img">
+                <img src="img/avatar.svg" alt="personal info" />
+              </div>
+              <div id="personal">
+                <h2>Personal Info</h2>
+              </div>
             </div>
+            <div class="content-kotak">
+              <p class="content-kotak__paragraf">
+                I am a fresh graduate. I graduated from IPB vocational school
+                computer engineering. I am currently 21 years old. I am
+                interested in software engineers, especially websites and mobile
+                applications. I am also interested in cloud computing. I have a
+                high curiosity and I like learning new things. I like to
+                compete, I can work in groups, and I am not difficult to adapt.
+              </p>
+            </div>
+          </div>
         </div>
 
         <div id="kotak-experience">
-            <div class="isi-kotak">
-                <div class="judul-isi-kotak">
-                    <div class="judul-isi-kotak__img">
-                        <img src="img/work.svg" alt="experience">
-                    </div>
-                    <div id="experience">
-                        <h2>Experience</h2>
-                    </div>
-                </div>
-                <div class="content-kotak">
-                    <p class="waktu">Feb-Apr 2019</p>
-                    <p class="aktivitas">PT. PLN (Persero) UPT Bogor
-                        <br>IT Support Intern
-                    </p>
-                </div>
+          <div class="isi-kotak">
+            <div class="judul-isi-kotak">
+              <div class="judul-isi-kotak__img">
+                <img src="img/work.svg" alt="experience" />
+              </div>
+              <div id="experience">
+                <h2>Experience</h2>
+              </div>
             </div>
-        </div>       
-        
+            <div class="content-kotak">
+              <p class="waktu">Feb-Apr 2019</p>
+              <p class="aktivitas">
+                PT. PLN (Persero) UPT Bogor <br />IT Support Intern
+              </p>
+            </div>
+          </div>
+        </div>
+
         <div id="kotak-education">
-            <div class="isi-kotak">
-                <div class="judul-isi-kotak">
-                    <div class="judul-isi-kotak__img">
-                        <img src="img/mortarboard.svg" alt="education">
-                    </div>
-                    <div id="education">
-                        <h2>Education</h2>
-                    </div>
-                </div>
-                <div class="content-kotak">
-                    <p class="waktu">2016-2019</p>
-                    <p class="aktivitas">Vocational School, IPB University
-                        <br>•Computer Engineering
-                        <br>•GPA: 3.6 / 4.0
-                        <br>•Subject:
-                        <br>-Network (Routing, Switching, LAN, WAN, Security, Computer Network Operating System, Cisco, Mikrotik)
-                        <br>-Hardware (Embedded System, Arduino)
-                        <br>-Programming (Android, Web, Object Oriented Programming)
-                    </p>
-                </div>
+          <div class="isi-kotak">
+            <div class="judul-isi-kotak">
+              <div class="judul-isi-kotak__img">
+                <img src="img/mortarboard.svg" alt="education" />
+              </div>
+              <div id="education">
+                <h2>Education</h2>
+              </div>
             </div>
-        </div>  
+            <div class="content-kotak">
+              <p class="waktu">2016-2019</p>
+              <p class="aktivitas">
+                Vocational School, IPB University <br />•Computer Engineering
+                <br />•GPA: 3.6 / 4.0 <br />•Subject: <br />-Network (Routing,
+                Switching, LAN, WAN, Security, Computer Network Operating
+                System, Cisco, Mikrotik) <br />-Hardware (Embedded System,
+                Arduino) <br />-Programming (Android, Web, Object Oriented
+                Programming)
+              </p>
+            </div>
+          </div>
+        </div>
 
         <div id="kotak-organization">
-            <div class="isi-kotak">
-                <div class="judul-isi-kotak">
-                    <div class="judul-isi-kotak__img">
-                        <img src="img/collaboration.svg" alt="organization">
-                    </div>
-                    <div id="organization">
-                        <h2>Organization</h2>
-                    </div>
-                </div>
-                <div class="content-kotak">
-                    <p class="waktu">2016-2018</p>
-                    <p class="aktivitas">Micro IT Community
-                        <br>•Member of Software, Hardware, and Networking Division
-                        <br>•Association of students in computer engineering, informatics management, and communication study programs at the IPB University
-                    </p>
-                </div>        
+          <div class="isi-kotak">
+            <div class="judul-isi-kotak">
+              <div class="judul-isi-kotak__img">
+                <img src="img/collaboration.svg" alt="organization" />
+              </div>
+              <div id="organization">
+                <h2>Organization</h2>
+              </div>
             </div>
+            <div class="content-kotak">
+              <p class="waktu">2016-2018</p>
+              <p class="aktivitas">
+                Micro IT Community <br />•Member of Software, Hardware, and
+                Networking Division <br />•Association of students in computer
+                engineering, informatics management, and communication study
+                programs at the IPB University
+              </p>
+            </div>
+          </div>
         </div>
 
         <div id="kotak-commitee">
-            <div class="isi-kotak">
-                <div class="judul-isi-kotak">
-                    <div class="judul-isi-kotak__img">
-                        <img src="img/group.svg" alt="commitee">
-                    </div>
-                    <div id="commitee">
-                        <h2>Commitee</h2>
-                    </div>
-                </div>
-                <div class="content-kotak">
-                    <p class="waktu">2018
-                        <br><br><br><br>2017
-                        <br><br><br><br>2017
-                    </p>
-                    <p class="aktivitas">IT Festival
-                        <br>•Vice Chairman of The Event
-                        <br>•IT Competitions and Talkshows
-                        <br>Micro Technology Education
-                        <br>•Member of Logistics Division
-                        <br>•Educate Kosgoro High School Students
-                        <br>IT Knowledge
-                        <br>•Member of Logistics Division
-                        <br>•IT Workshps dan Tlakshows
-                    </p>
-                </div>         
+          <div class="isi-kotak">
+            <div class="judul-isi-kotak">
+              <div class="judul-isi-kotak__img">
+                <img src="img/group.svg" alt="commitee" />
+              </div>
+              <div id="commitee">
+                <h2>Commitee</h2>
+              </div>
             </div>
+            <div class="content-kotak">
+              <p class="waktu">
+                2018 <br /><br /><br /><br />2017 <br /><br /><br /><br />2017
+              </p>
+              <p class="aktivitas">
+                IT Festival <br />•Vice Chairman of The Event <br />•IT
+                Competitions and Talkshows <br />Micro Technology Education
+                <br />•Member of Logistics Division <br />•Educate Kosgoro High
+                School Students <br />IT Knowledge <br />•Member of Logistics
+                Division <br />•IT Workshps dan Tlakshows
+              </p>
+            </div>
+          </div>
         </div>
 
         <div id="kotak-knowledge">
-            <div class="isi-kotak">
-                <div class="judul-isi-kotak">
-                    <div class="judul-isi-kotak__img">
-                        <img src="img/skills.svg" alt="knowledge">
-                    </div>
-                    <div id="knowledge">
-                        <h2>Knowledge</h2>
-                    </div>
-                </div>
-                <div class="content-kotak">
-                    <ul>
-                        <li>TCP/IP, RIP, OSPF</li>
-                        <li>Linux, Mikrotik, Cisco</li>
-                        <li>C, HTML, CSS, PHP, Javascript</li>
-                    </ul>
-                </div>
+          <div class="isi-kotak">
+            <div class="judul-isi-kotak">
+              <div class="judul-isi-kotak__img">
+                <img src="img/skills.svg" alt="knowledge" />
+              </div>
+              <div id="knowledge">
+                <h2>Knowledge</h2>
+              </div>
             </div>
+            <div class="content-kotak">
+              <ul>
+                <li>TCP/IP, RIP, OSPF</li>
+                <li>Linux, Mikrotik, Cisco</li>
+                <li>C, HTML, CSS, PHP, Javascript</li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <div id="kotak-interest">
-            <div class="isi-kotak">
-                <div class="judul-isi-kotak">
-                    <div class="judul-isi-kotak__img">
-                        <img src="img/heart.svg" alt="interest">
-                    </div>
-                    <div id="interest">
-                        <h2>Interest</h2>
-                    </div>
-                </div>
-                <div class="content-kotak">
-                    <ul>
-                        <li>Cloud computing</li>
-                        <li>Networking</li>
-                        <li>Software Engineer</li>
-                        <li>Football and Futsal</li>
-                    </ul>
-                </div>
+          <div class="isi-kotak">
+            <div class="judul-isi-kotak">
+              <div class="judul-isi-kotak__img">
+                <img src="img/heart.svg" alt="interest" />
+              </div>
+              <div id="interest">
+                <h2>Interest</h2>
+              </div>
             </div>
+            <div class="content-kotak">
+              <ul>
+                <li>Cloud computing</li>
+                <li>Networking</li>
+                <li>Software Engineer</li>
+                <li>Football and Futsal</li>
+              </ul>
+            </div>
+          </div>
         </div>
-    
-    </div>
-</section>
-<footer>
-    <p class="isi-footer">
-        Muhammad Nafi' Furqon Diani, Copyright @2019.
-    </p>
-</footer>
-</body>
+      </div>
+    </section>
+    <footer>
+      <p class="isi-footer">Muhammad Nafi' Furqon Diani, Copyright @2019.</p>
+    </footer>
+  </body>
 
-<script src="js/script.js"></script>
-
+  <script src="js/script.js"></script>
 </html>
